--- a/ecom_app/templates/store/store.html
+++ b/ecom_app/templates/store/store.html
@@ -36,7 +36,7 @@
             </div>
 
             <div class="action-buttons">
-                <button class="btn btn-outline-secondary add-btn">Add to Cart</button>
+                <button data-product={{product.id}} data-action="add" class="btn btn-outline-secondary add-btn update-cart">Add to Cart</button>
                 <a class="btn btn-outline-success" href="#">View</a>
             </div>
 
