--- a/ecom_app/templates/store/checkout.html
+++ b/ecom_app/templates/store/checkout.html
@@ -43,6 +43,7 @@
         <br>
         <div class="box-element hidden" id="payment-info">
             <small>Paypal Options</small>
+            <button id="make-payment">Make Payment</button>
         </div>
         
     </div>
@@ -66,4 +67,61 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+    var shipping = '{{ order.shipping }}'; 
+    var total = '{{order.get_cart_total}}'
+
+    if (shipping === false) { 
+        document.getElementById('shipping-info').innerHTML = '';
+    }
+
+
+
+    var form = document.getElementById('form')
+
+    form.addEventListener('submit', function(e){
+        e.preventDefault()
+        console.log('Form submitted')
+        document.getElementById('form-button').classList.add('hidden')
+        document.getElementById('payment-info').classList.remove('hidden')
+    })
+
+    document.getElementById('make-payment').addEventListener('click', function(e){
+        submitFormData()
+    })
+
+    function submitFormData(){
+        console.log('Payment button clicked')
+
+        var userFormData = {
+            'name':  null,
+            'email': null,
+            'total': null,
+        }
+
+        var shippingInfo = {
+            'address': null,
+            'city':  null,
+            'state': null,
+            'zipcode': null,
+        }
+
+        if(shipping != 'False'){
+        shippingInfo.address = form.address.value
+        shippingInfo.city = form.city.value
+        shippingInfo.state = form.state.value
+        shippingInfo.zipcode = form.zipcode.value
+        }
+
+        if(user == 'AnonymousUser'){
+        userFormData.name = form.name.value
+        userFormData.email = form.email.value
+        }
+    }
+    
+</script>
+
+
+
 {% endblock content %}
