--- a/ecom_app/templates/store/main.html
+++ b/ecom_app/templates/store/main.html
@@ -28,8 +28,8 @@
     </script>
 
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<body  >
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-dark">
         <a class="navbar-brand" id="ecom" href="{% url 'store' %}">Ecom</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
                 </li>
             </ul>
             <div class="ml-auto">
-                <a href="#" class="btn btn-warning mr-3">Login</a>
+                
                 <a href="{% url 'cart' %}" class="mr-3">
                     <img id="cart-icon" src="{% static 'images/6+cart.png' %}">
                 </a>
